# compiler-labs

./: .gitignore  Makefile  README-zhcn.md  README.md  pyproject.toml  readme.md  requirements.txt
compiler_labs/lab1/: Makefile  README-zhcn.md  README.md  __init__.py  lexical.py  main.py  requirements.txt
compiler_labs/lab1/data/: sample.out  sample.sym  sample2.sym
compiler_labs/lab1/imgs/: main.dot
compiler_labs/lab1/outputs/: input.out  sample.sym
compiler_labs/lab1/tests/: test_parser.py
compiler_labs/lab2/: Makefile  README-zhcn.md  README.md  main.py
compiler_labs/lab2/data/: grammar1.txt  grammar_fixed  grammar_standard.txt  sample.watch  sample_fixed.in
compiler_labs/lab2/middlewares/: __init__.py
compiler_labs/lab2/models/: __init__.py  grammar.py  lr0.py  lr1.py  slr1.py
compiler_labs/lab2/outputs/: parse_tree.html  result.txt  (+1 more)
compiler_labs/lab3/: README-zhcn.md  README.md  main.py  makefile
lab1/: Makefile  lexical.py  main.py  readme.md  readme_cn.md  requirements.md
lab1/data/: sample.in  sample2.in
lab1/outputs/: sample.out
lab1/tests/: test_parser.py
lab2/: Makefile  main.py  model.py  output.py  readme.md  report.html  result.out
lab2/data/: grammar.txt  grammar1.txt  grammar_c_full.txt  sample.in2  sample.watch
lab2/docs/: requirements.md
lab2/middleware/: __init__.py  lexical.py
lab2/middlewares/: __init__.py
lab2/models/: __init__.py  lr0.py  lr1.py  slr1.py
lab2/tests/: test_lr0.py  test_lr1.py  test_model.py  test_read.py
lab2/utils/: disp.py  display.py  hash.py  reader.py
lab2/vis/: __init__.py
(+38 files in other folders)
